# legislacao_doencas_raras

./: .gitignore  README.md  pyproject.toml
ans_E_anvisa/: README.md  coletar_ans.py  coletar_anvisa.py  scraper_ans.py  scraper_anvisa.py
biblioteca_conitec/: README.md  scraper_conitec.py
cfm/: README.md  README_CFM.md  cfm_scraper.py  requirements.txt  scraper_cfm.py
cns/: README.md
legislacao/: README.md  Unificado - Bruno.xlsx  legislacao_federal_scraper.py  requirements.txt
legislacao/output/: base_final.xlsx  teste.ipynb
ms/: README.md  ms_selenium.ipynb  requirements.txt  scraper_saudelegis.py
ms/_archive/: ms_parse.ipynb
stj/: README.md  STJ - Jurisprudência do STJ.html  parser_stj.py  requirements.txt
stj/STJ - Jurisprudência do STJ_files/: api.js  barraIconesNavegacao.css  custon.css  fontes.css  funcoes.js  funcoes_busca_portal.js  funcoes_novoPortal.js  getbrowser.js  icofont.min.css  interface.js  jquery-ui.css  menu.css  menu.js  menu_atual.css  menu_superior.css  menu_superior.js  principal.css  principal.js  principal_002.js  pstj-funcs-conf-ini.js  recaptcha__pt.js  responsive.css  responsive_002.css  valida_data.js
utils/: __init__.py  comparador_bases.py
visualizacoes/: .gitignore  pyproject.toml  timeline_facets.py
