[project]
name = "sabara-metodologia"
version = "0.1.0"
description = "Scrapers e análises de normas relacionadas a doenças raras no Brasil"
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "pandas>=2.0.0",

    # Scraping with raspe (Selenium-based)
    "raspe @ git+https://github.com/bdcdo/RasPe.git",
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0",

    # PDF processing (biblioteca_conitec)
    "pdfplumber>=0.10.0",
    "requests>=2.28.0",

    # Visualization
    "matplotlib>=3.10",
]

[dependency-groups]
dev = [
    "ipykernel>=6.0.0",
]
